# testix

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Jamfile  Jamrules  Jamrules.cleanpyc  Jamrules.egg  Jamrules.eggtest.example  Jamrules.startertests  Jamrules.testix  Jamrules.testix.egg  README  README.md  Rakefile  __main__.py  env.sh  makeegg.sh  makestage.py  pyproject.toml  run_chatbot_tests.sh  setup.py  stage_unit.sh  testix.sh
.claude/commands/: fillblanks.md  pmd.md  research-mode.md  shup.md  style.md
.github/actions/basic_setup/: action.yaml
.github/workflows/: linters.yaml  publish.yaml  tests.yaml
chatbot/src/chatbot/: chatbot.py  responder.py
chatbot/test/: test_chatbot.py  test_chatbot_with_unittest_mock.py
docs/: colors.rst  common.rst  conf.py  docs_environment.env  index.rst  messaging.rst  requirements.txt  tutorial.rst
docs/_static/: custom.css
docs/line_monitor/source/: line_monitor.py
docs/reference/: advanced_argument_expectations.rst  asyncio_support.rst  context_manager_support.rst  hooks.rst  index.rst  less_exact_expectations.rst  scenarios_and_fake_objects.rst  test_everlasting.py
docs/reference/1/: reader.py  test_reader.py
docs/reference/2/: test_reader.py
docs/reference/3/: test_unordered.py
docs/reference/4/: test_locker_context_manager.py
docs/reference/argument_expectations/: classroom.py  particle_classifier.py  robot.py  server.py  temporary_storage.py  test_arbitrary_argument_expectation.py  test_atexit_handler.py  test_ignore_details.py  test_object_identity.py  test_particle_classifier.py
docs/reference/async_tests/: async_read.py  test_1.py  (+2 more)
docs/tutorial/: conclusion.rst  design.rst  e2e_test.rst  exact_enforcement.rst  fail_properly.rst  index.rst  more_about_readability.rst  more_advance_tests.rst  recap_1.rst  working_with_scenarios_and_fake_objects.rst
documentation/: conf.py  index.rst
examples/: Jamfile  calculator.py  daylight.py
examples/tests/: Jamfile  test_bugfix_weird_fakeobject_bug.py  test_calculator.py  test_daylight.py  test_daylight_with_starndard_mock.py  test_using_aiofiles.py
src/testix/: fake_privacy_violator.py  fakefile.py  fakeobject.py  frequentlyused.py  patch_module.py  scenario.py
startertests/: Jamfile  fakeclassderiver.py  startertest_argumentexpectations.py  startertest_fakeclass.py  startertest_fakemodule.py  startertest_fakeobject.py  startertest_scenario.py  startertest_suite.py  startertestcollection.py
test/: conftest.py  helper_module.py  some_module.py  test_argumentexpectations.py  test_fake_context.py  test_fakeobject.py  test_patcher.py  test_scenario.py
testix/: DSL.py  Jamfile  __init__.py  argumentexpectations.py  asserts.py  awaitable.py  call_character.py  call_formatter.py  context_wrapper.py  exception.py  expectationmaker.py  expectations.py  failhooks.py  fake.py  fake_context.py  fake_privacy_violator.py  fakeclass.py  fakefile.py  fakemodule.py  fakeobject.py  frequentlyused.py  hook.py  loop_breaker.py  mocks.py  modifiers.py  patch_module.py  runner.py  saveargument.py  scenario.py  scenario_mocks.py  suite.py  testixexception.py  trivial.py
testix/call_modifiers/: async_for.py  asynchronous.py  awaitable.py  base.py  synchronous.py  trivial.py
testix/context_wrapper/: asynchronous.py  synchronous.py
testix/expectations/: async_context_call.py  awaitable_call.py  call.py  normal_call.py  sync_context_call.py
testix/startertests/: asserts.py  fakemoduleimporter.py  startertest_argumentexpectations.py  startertest_fakeclass.py  startertest_fakemodule.py  startertest_fakeobject.py  startertest_scenario.py  startertest_suite.py  startertestcollection.py
tools/: docs_new_stage.py  full_testix_importer.py
vim/: vimrc
vim/plugin/: allignparameters.vim  block.vim  bufexplorer.vim  conque_term.vim  mru.vim  newfile.vim  newfunction.vim  togglecomment.vim
(+100 files in other folders)
