[project]
name = "testix"
version = "12.1.0"
description = "Mocking framework Python with *exact* Scenarios"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["mock", "TDD", "testix", "tests", "Test Driven Development"]
authors = [
  {name = "Yoav Kleinberger", email = "haarcuba@gmail.com"},
]
maintainers = [
  {name = "Yoav Kleinberger", email = "haarcuba@gmail.com"},
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.1.1",
]

[project.urls]
Homepage = "https://testix.readthedocs.io/en/latest"
Documentation = "https://testix.readthedocs.io/en/latest"
Repository = "https://github.com/haarcuba/testix.git"

[dependency-groups]
dev = [
    "hypothesis>=6.24.0",
    "pytest-asyncio>=0.16.0",
    "pytest-cov>=3.0.0",
    "ipython>=7.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/testix"]
